# ferrumc

./: .dockerignore  .envrc  .gitignore  BLOCKS_USAGE.md  BOUNTY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  blocksparser.py  chunk.dump  codec.json  compression_tester.py  config.toml  flake.nix  fluid_benchmark_TODO.md  libtypes.rlib  nbt_codec.nbt  newblocks.json  rust-toolchain.toml  rustfmt.toml  test.nbt  test_region.mca
src/crates/custom_nbt/: Cargo.toml
src/crates/custom_nbt/benches/: benches.rs
src/crates/custom_nbt/src/: lib.rs  main.rs  nbt_spec.rs  test.rs
src/crates/custom_nbt/src/nbt_spec/: buffer.rs  impls.rs  mod.rs  named_tag.rs  primitive_impls.rs  serializer.rs  tag.rs  tag_types.rs  tags.rs
src/crates/ferrumc_net/: Cargo.toml
src/crates/ferrumc_net/src/: lib.rs  test_ecs.rs  the_dimension_codec.rs
src/crates/ferrumc_net/src/packets/: handshake.rs  mod.rs
src/crates/ferrumc_net/src/systems/: keep_alive_system.rs  mod.rs  tick_system.rs
src/crates/ferrumc_utils/: Cargo.toml
src/crates/ferrumc_utils/src/: config.rs  error.rs  lib.rs  prelude.rs  type_impls.rs
src/crates/ferrumc_utils/src/components/: keep_alive.rs  player.rs
src/crates/ferrumc_utils/src/encoding/: mod.rs  position.rs  string.rs  varint.rs  varlong.rs  velocity.rs
src/crates/ferrumc_world/: .gitignore  Cargo.toml
src/crates/ferrumc_world/src/: chunk.rs  lib.rs
src/crates/ferurmc_codec/: Cargo.toml
src/crates/ferurmc_codec/src/: error.rs  lib.rs
src/crates/ferurmc_codec/src/enc/: mod.rs  non_primitives.rs  primitives.rs
src/crates/ferurmc_codec/src/network_types/: varint.rs  varlong.rs
src/crates/ferurmc_codec/src/tests/: mod.rs
src/lib/blocks/: Cargo.toml  build.rs  build_config.toml
src/lib/blocks/benches/: bench.rs
src/lib/blocks/crates/property/: Cargo.toml
src/lib/blocks/src/: behavior_trait.rs  blocks.rs  lib.rs  mappings.rs  simple_blocks.rs  vtable.rs
src/lib/blocks/src/blocks/: banner_block.rs  bed_block.rs  (+135 more)
src/lib/chunk_storage/: Cargo.toml
src/lib/chunk_storage/src/: chunk_format.rs  lib.rs
src/lib/commands/: Cargo.toml  README.md
src/lib/commands/default_commands/: Cargo.toml
src/lib/commands/src/: ctx.rs  errors.rs  events.rs  infrastructure.rs  input.rs  lib.rs  messages.rs  sender.rs  tests.rs
src/lib/components/: Cargo.toml
src/lib/components/src/: active_effects.rs  health.rs  lib.rs  world_time.rs
src/lib/config/: Cargo.toml
src/lib/config/src/: favicon.rs  lib.rs  server_config.rs  setup.rs  whitelist.rs
src/lib/core/: Cargo.toml  README.md
src/lib/core/benches/: collisions.rs  core_bench.rs
src/lib/core/src/: block.rs  color.rs  crafting.rs  errors.rs  lib.rs  mq.rs  tick.rs  time.rs
src/lib/core/state/: Cargo.toml
src/lib/dashboard/: .gitignore  Cargo.toml  build.rs
src/lib/dashboard/assets/: style.css
src/lib/dashboard/dashboard-dist/: .gitkeep
src/lib/dashboard/src/: handshake.rs  lib.rs  telemetry.rs  ws.rs
src/lib/dashboard/templates/: base.html  console.html  overview.html  players.html
src/lib/data/: Cargo.toml
src/lib/data/src/: helpers.rs  lib.rs  tests.rs
src/lib/data/tests/: block_usage.rs
src/lib/default_commands/: Cargo.toml
src/lib/default_commands/src/: clear.rs  credits.rs  debug.rs  echo.rs  experience.rs  fly.rs  gamemode.rs  give.rs  givetest.rs  kill.rs  lib.rs  list.rs  nested.rs  say.rs  spawn.rs  spawn_entity.rs  spawnpig.rs  stop.rs  time.rs  tp.rs  tps.rs
src/lib/derive_macros/: Cargo.toml  build.rs
src/lib/derive_macros/src/: helpers.rs  lib.rs
src/lib/ecs/: Cargo.toml  README.md
src/lib/ecs/benches/: bench.rs  ecs_bench.rs
src/lib/ecs/src/: entities.rs  errors.rs  lib.rs  query.rs
src/lib/entities/: Cargo.toml
src/lib/entities/src/: bundles.rs  collision.rs  components.rs  entity_lookup.rs  events.rs  factory.rs  game_entity.rs  lib.rs  markers.rs  spawn_command_queue.rs  spawn_queue.rs  spawner.rs
src/lib/entity_utils/: Cargo.toml
src/lib/entity_utils/src/: lib.rs  send_message.rs
src/lib/events/: Cargo.toml
src/lib/events/src/: change_gamemode.rs  errors.rs  infrastructure.rs  lib.rs  player_damage.rs  player_digging.rs  spawn_pig.rs
src/lib/inventories/: Cargo.toml
src/lib/inventories/src/: builder.rs  components.rs  defined_slots.rs  errors.rs  hotbar.rs  inventory.rs  item.rs  lib.rs  slot.rs  storage.rs  sync.rs
src/lib/inventory/: Cargo.toml
src/lib/inventory/src/: builder.rs  contents.rs  errors.rs  inventory.rs  lib.rs  player_inventory.rs  slot.rs  tests.rs  viewers.rs
src/lib/messages/: Cargo.toml
src/lib/messages/src/: block_break.rs  block_interaction.rs  block_place.rs  change_gamemode.rs  chunk_calc.rs  clear_player_inventory.rs  client_settings.rs  entity_spawn.rs  entity_update.rs  give_item_to_player.rs  inventory.rs  lib.rs  particle.rs  player_damage.rs  player_digging.rs  player_eat.rs  player_exp.rs  player_join.rs  player_leave.rs  spawn_pig.rs  teleport_player.rs
src/lib/net/: Cargo.toml  README.md  build.rs
src/lib/net/benches/: bench.rs  packets.rs
src/lib/net/codec/: Cargo.toml
src/lib/net/datatypes/: Cargo.toml
src/lib/net/encryption/: Cargo.toml
src/lib/net/packets/: Cargo.toml
src/lib/net/src/: auth.rs  broadcast.rs  compression.rs  connection.rs  errors.rs  events.rs  lib.rs  player_ext.rs  server.rs  slot.rs
src/lib/net/types/: Cargo.toml
src/lib/particles/: Cargo.toml
src/lib/particles/src/: lib.rs  net.rs
src/lib/pdc/: Cargo.toml
src/lib/pdc/src/: container.rs  db.rs  errors.rs  lib.rs  load.rs  tests.rs
src/lib/performance/: Cargo.toml
src/lib/performance/src/: lib.rs  memory.rs  tick.rs  tps.rs
src/lib/player_state/: Cargo.toml
src/lib/player_state/src/: data.rs  errors.rs  storage.rs
src/tests/: Cargo.toml  build.rs  chunk_stuff.rs  nbt.rs  nbt_de.rs  nbt_ser.rs  query.rs
src/tests/src/: lib.rs
src/tests/src/block/: mod.rs
src/tests/src/ecs/: mod.rs
src/tests/src/nbt/: de.rs  mixed.rs  mod.rs  ser.rs
src/tests/src/net/: mod.rs
tools/stress-bot/: Cargo.toml  README.md
tools/stress-bot/src/: main.rs
(+1546 files in other folders)
