# FerrumC Project workspace
#
# Layout of this file:
# - Members of the workspace.
# - Profile compilation settings.
# - Workspace lints
# - Workspace dependencies.


[workspace]
resolver = "2"

default-members = ["src/bin"]

#================= Members =================#
members = [
    "src/bin",

    # Core Layers
    "src/lib/core",       # Pure Data
    "src/lib/components", # Bevy Glue
    "src/lib/messages",   # Events/Messages
    "src/lib/registry",   # Compile-time Data
    "src/lib/protocol",

    # Logic & Systems
    "src/lib/net",
    "src/lib/commands",
    "src/lib/commands/default_commands",
    "src/lib/world",
    "src/lib/world_gen",

    # Utilities & Adapters
    "src/lib/adapters/anvil",
    "src/lib/adapters/nbt",
    "src/lib/derive_macros",
    "src/lib/utils",
    "src/lib/utils/general_purpose",
    "src/lib/utils/logging",
    "src/lib/utils/profiling",
    "src/lib/utils/threadpool",

    # Internal Crates (Net internals)
    "src/lib/net/crates/encryption",

    # Tools
    "tools/data-gen",

    # Other Systems
    "src/lib/storage",
    "src/lib/text",
    "src/lib/config",
    "src/lib/plugins",
    "src/lib/scheduler",


]

[workspace.package]
edition = "2021"
version = "0.1.0"

#================== Lints ==================#
[workspace.lints.rust]
unsafe_code = "allow"
unused_unsafe = "deny"
#unsafe_op_in_unsafe_fn = "deny"
#unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
match_bool = "deny"
mut_mut = "deny"
wildcard_dependencies = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

#================= Profile =================#
[profile.profiling]
inherits = "release"
debug = true

[profile.release]

[profile.hyper]
inherits = "release"
strip = "symbols"
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.bench]
debug = true

#=============== Dependencies ==============#
[workspace.dependencies]
# Workspace members
# --- 1. The Core Data Layers ---
ferrumc-core = { path = "src/lib/core" }
ferrumc-components = { path = "src/lib/components" }
ferrumc-messages = { path = "src/lib/messages" }
ferrumc-registry = { path = "src/lib/registry" }
ferrumc-protocol = { path = "src/lib/protocol" }

# --- 2. Logic & Systems ---
ferrumc-net = { path = "src/lib/net" }
ferrumc-commands = { path = "src/lib/commands" }
ferrumc-default-commands = { path = "src/lib/commands/default_commands" }
ferrumc-world = { path = "src/lib/world" }
ferrumc-world-gen = { path = "src/lib/world_gen" }

# --- 3. Utilities ---
ferrumc-macros = { path = "src/lib/derive_macros" }
ferrumc-utils = { path = "src/lib/utils" }
ferrumc-general-purpose = { path = "src/lib/utils/general_purpose" }
ferrumc-logging = { path = "src/lib/utils/logging" }
ferrumc-profiling = { path = "src/lib/utils/profiling" }
ferrumc-threadpool = { path = "src/lib/utils/threadpool" }
ferrumc-text = { path = "src/lib/text" }
ferrumc-config = { path = "src/lib/config" }

# --- 4. Adapters & Internals ---
ferrumc-anvil = { path = "src/lib/adapters/anvil" }
ferrumc-nbt = { path = "src/lib/adapters/nbt" }
ferrumc-net-encryption = { path = "src/lib/net/crates/encryption" }
ferrumc-storage = { path = "src/lib/storage" }
ferrumc-plugins = { path = "src/lib/plugins" }
ferrumc-scheduler = { path = "src/lib/scheduler" }

# Asynchronous
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
    "io-util",
    "test-util",
], default-features = false }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
log = "0.4.28"

# Concurrency/Parallelism
parking_lot = "0.12.5"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
rusty_pool = "0.7.0"
crossbeam-queue = "0.3.12"

# Network
ureq = "3.1.2"
reqwest = { version = "0.12.24", features = ["json"] }

# Error handling
thiserror = "2.0.17"

# Cryptography
rand = "0.10.0-rc.0"
fnv = "1.0.7"
wyhash = "0.6.0"
ahash = "0.8.12"
rsa = { version = "0.10.0-rc.10" }
aes = { version = "0.8.4" }
cfb8 = "0.8.1"
sha1 = "0.10.6"
num-bigint = "0.4.6"

# Encoding/Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"
base64 = "0.22.1"

# When if bitcode's latest version has been changed, see if clippy still complains about
# src/lib/net/src/packets/outgoing/chunk_and_light_data.rs
#bitcode = "0.6.7"
#bitcode_derive = "0.6.7"
toml = "0.9.8"
craftflow-nbt = "2.1.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
simd-json = "0.17.0"

# Bit manipulation
byteorder = "1.5.0"

# Data types
dashmap = "7.0.0-rc2"
uuid = { version = "1.18.1", features = ["v4", "v3", "serde"] }
indexmap = { version = "2.12.0", features = ["serde"] }

# Macros
lazy_static = "1.5.0"
quote = "1.0.41"
syn = "2.0.106"
proc-macro2 = "1.0.101"
paste = "1.0.15"
maplit = "1.0.2"
macro_rules_attribute = "0.2.2"

# Magic
dhat = "0.3.3"
ctor = "0.6.0"

# Compression/Decompression
flate2 = { version = "1.1.4", features = ["zlib"], default-features = false }
lzzzz = "2.0.0"
yazi = "0.2.1"

# Database
heed = "0.22.0"
moka = { version = "0.12.11", features = ["sync", "future"] }

# CLI
clap = "4.5.49"
indicatif = "0.18.0"
colored = "3.0.0"

# Misc
deepsize = "0.2.0"
page_size = "0.6.0"
enum-ordinalize = "4.3.0"
regex = "1.12.2"
noise = "0.9.0"
ctrlc = "3.5.0"
num_cpus = "1.17.0"
typename = "0.1.2"
bevy_ecs = { version = "0.17.2", features = ["multi_threaded", "trace"] }
bevy_math = "0.16.1"
once_cell = "1.21.3"

# I/O
memmap2 = "0.9.8"
tempfile = "3.23.0"

# Benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }


bitcode = { git = "https://github.com/SoftbearStudios/bitcode" }
bitcode_derive = { git = "https://github.com/SoftbearStudios/bitcode" }

phf_codegen = { version = "0.11" }
phf = { version = "0.11", features = ["macros"] }
