# FerrumC Project workspace
#
# Layout of this file:
# - Members of the workspace.
# - Profile compilation settings.
# - Workspace lints
# - Workspace dependencies.


[workspace]
resolver = "2"

default-members = ["src/bin"]

#================= Members =================#
members = [
    # --- Layer 6: The Assembler ---
    "src/bin",

    # --- Layer 5: Game Logic ---
    "src/lib/modules",
    "src/lib/world_gen",
    "src/lib/commands",
    "src/lib/commands/default_commands",

    # --- Layer 4: Infrastructure (I/O) ---
    "src/lib/net",
    "src/lib/storage",    # (Was chunk_storage)
    "src/lib/management", # (JSON-RPC / Control Plane)

    # --- Layer 3: Interfaces ---
    "src/lib/protocol",
    "src/lib/api",

    # --- Layer 2: Engine State ---
    "src/lib/ecs",      # (Components + Messages + Resources)
    "src/lib/registry",

    # --- Layer 1: Primitives ---
    "src/lib/core",
    "src/lib/nbt",           # (Renamed from adapters/nbt if you moved it, otherwise update path)
    "src/lib/utils",
    "src/lib/derive_macros",
    "src/lib/text",          # Text is a primitive type
    "src/lib/config",        # Config is a primitive dependency

    # --- Tools ---
    "tools/data-gen",

    # --- Internal / Legacy / Transitions ---
    # (Keep these until fully migrated or deleted)
    "src/lib/adapters/anvil",
    "src/lib/net/crates/encryption", # Internal to net
    "src/lib/utils/general_purpose",
    "src/lib/utils/logging",
    "src/lib/utils/profiling",
    "src/lib/utils/threadpool",
    "src/lib/scheduler",

    # Deprecated (Delete after migration)
    "src/lib/world", # Replacing with just storage
]

[workspace.package]
edition = "2021"
version = "0.1.0"

#================== Lints ==================#
[workspace.lints.rust]
unsafe_code = "allow"
unused_unsafe = "deny"
#unsafe_op_in_unsafe_fn = "deny"
#unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
match_bool = "deny"
mut_mut = "deny"
wildcard_dependencies = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

#================= Profile =================#
[profile.profiling]
inherits = "release"
debug = true

[profile.release]

[profile.hyper]
inherits = "release"
strip = "symbols"
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.bench]
debug = true

#=============== Dependencies ==============#
[workspace.dependencies]

# --- Layer 5: Game Logic ---
ferrumc-modules = { path = "src/lib/modules" }
ferrumc-world-gen = { path = "src/lib/world_gen" }
ferrumc-commands = { path = "src/lib/commands" }
ferrumc-default-commands = { path = "src/lib/commands/default_commands" }

# --- Layer 4: Infrastructure ---
ferrumc-net = { path = "src/lib/net" }
ferrumc-storage = { path = "src/lib/storage" }
ferrumc-management = { path = "src/lib/management" }

# --- Layer 3: Interfaces ---
ferrumc-protocol = { path = "src/lib/protocol" }
ferrumc-api = { path = "src/lib/api" }

# --- Layer 2: Engine State ---
ferrumc-ecs = { path = "src/lib/ecs" }
ferrumc-registry = { path = "src/lib/registry" }

# --- Layer 1: Primitives ---
ferrumc-core = { path = "src/lib/core" }
ferrumc-utils = { path = "src/lib/utils" }
ferrumc-macros = { path = "src/lib/derive_macros" }
ferrumc-nbt = { path = "src/lib/adapters/nbt" }
ferrumc-text = { path = "src/lib/text" }
ferrumc-config = { path = "src/lib/config" }

# --- Internal / Adapters ---
ferrumc-anvil = { path = "src/lib/adapters/anvil" }
ferrumc-net-encryption = { path = "src/lib/net/crates/encryption" }
ferrumc-scheduler = { path = "src/lib/scheduler" }
ferrumc-general-purpose = { path = "src/lib/utils/general_purpose" }
ferrumc-logging = { path = "src/lib/utils/logging" }
ferrumc-profiling = { path = "src/lib/utils/profiling" }
ferrumc-threadpool = { path = "src/lib/utils/threadpool" }

# --- Deprecated (Keep until removed) ---
ferrumc-world = { path = "src/lib/world" }
ferrumc-plugins = { path = "src/lib/plugins" }

# --- External Crates ---
bevy_ecs = { version = "0.16.1", features = ["multi_threaded", "trace"] }
bevy_math = "0.16.1"
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
    "io-util",
    "test-util",
], default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
log = "0.4.28"
parking_lot = "0.12.5"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
rusty_pool = "0.7.0"
ureq = "3.1.2"
reqwest = { version = "0.12.24", features = ["json"] }
thiserror = "2.0.17"
rand = "0.10.0-rc.0"
fnv = "1.0.7"
wyhash = "0.6.0"
ahash = "0.8.12"
rsa = { version = "0.10.0-rc.10" }
aes = { version = "0.8.4" }
cfb8 = "0.8.1"
sha1 = "0.10.6"
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"
base64 = "0.22.1"
toml = "0.9.8"
craftflow-nbt = "2.1.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
simd-json = "0.17.0"
byteorder = "1.5.0"
dashmap = "7.0.0-rc2"
uuid = { version = "1.18.1", features = ["v4", "v3", "serde"] }
indexmap = { version = "2.12.0", features = ["serde"] }
lazy_static = "1.5.0"
quote = "1.0.41"
syn = "2.0.106"
proc-macro2 = "1.0.101"
paste = "1.0.15"
maplit = "1.0.2"
macro_rules_attribute = "0.2.2"
dhat = "0.3.3"
ctor = "0.6.0"
flate2 = { version = "1.1.4", features = ["zlib"], default-features = false }
lzzzz = "2.0.0"
yazi = "0.2.1"
heed = "0.22.0"
moka = { version = "0.12.11", features = ["sync", "future"] }
clap = "4.5.49"
indicatif = "0.18.0"
colored = "3.0.0"
deepsize = "0.2.0"
page_size = "0.6.0"
enum-ordinalize = "4.3.0"
regex = "1.12.2"
noise = "0.9.0"
ctrlc = "3.5.0"
num_cpus = "1.17.0"
typename = "0.1.2"
once_cell = "1.21.3"
memmap2 = "0.9.8"
tempfile = "3.23.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
bitcode = { git = "https://github.com/SoftbearStudios/bitcode" }
bitcode_derive = { git = "https://github.com/SoftbearStudios/bitcode" }
phf = { version = "0.11", features = ["macros"] }
phf_codegen = { version = "0.11" }
walkdir = "2"
