# FerrumC Project workspace
#
# Layout of this file:
# - Members of the workspace.
# - Profile compilation settings.
# - Workspace lints
# - Workspace dependencies.


[workspace]
resolver = "3"

#================= Members =================#
members = [
    "src/bin",
    "src/lib/adapters/anvil",
    "src/lib/adapters/nbt",
    "src/lib/commands",
    "src/lib/default_commands",
    "src/lib/core",
    "src/lib/core/state",
    "src/lib/derive_macros",
    "src/lib/net",
    "src/lib/net/crates/codec",
    "src/lib/net/crates/encryption",
    "src/lib/plugins",
    "src/lib/storage",
    "src/lib/text",
    "src/lib/utils",
    "src/lib/utils/general_purpose",
    "src/lib/utils/logging",
    "src/lib/utils/profiling",
    "src/lib/world",
    "src/lib/world_gen",
    "src/lib/utils/threadpool",
    "src/lib/inventories",
    "src/lib/registry",
    "src/lib/scheduler",
    "src/lib/components",
    "src/lib/messages",
    "src/lib/data",
    "src/lib/entities",
    "src/lib/physics",
    "src/lib/performance",
    "src/lib/dashboard",
    "src/lib/particles",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

#================== Lints ==================#
[workspace.lints.rust]
unsafe_code = "allow"
unused_unsafe = "deny"
#unsafe_op_in_unsafe_fn = "deny"
#unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
match_bool = "deny"
mut_mut = "deny"
wildcard_dependencies = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

#================= Profile =================#
[profile.profiling]
inherits = "release"
debug = true

[profile.release]

[profile.hyper]
inherits = "release"
strip = "symbols"
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.bench]
debug = true

#=============== Dependencies ==============#
[workspace.dependencies]
# Workspace members
ferrumc-anvil = { path = "src/lib/adapters/anvil" }
ferrumc-config = { path = "src/lib/config" }
ferrumc-core = { path = "src/lib/core" }
ferrumc-default-commands = { path = "src/lib/default_commands" }
ferrumc-commands = { path = "src/lib/commands" }
ferrumc-general-purpose = { path = "src/lib/utils/general_purpose" }
ferrumc-logging = { path = "src/lib/utils/logging" }
ferrumc-macros = { path = "src/lib/derive_macros" }
ferrumc-nbt = { path = "src/lib/adapters/nbt" }
ferrumc-net = { path = "src/lib/net" }
ferrumc-performance = { path = "src/lib/performance" }
ferrumc-net-codec = { path = "src/lib/net/crates/codec" }
ferrumc-net-encryption = { path = "src/lib/net/crates/encryption" }
ferrumc-plugins = { path = "src/lib/plugins" }
ferrumc-profiling = { path = "src/lib/utils/profiling" }
ferrumc-registry = { path = "src/lib/registry" }
ferrumc-scheduler = { path = "src/lib/scheduler" }
ferrumc-state = { path = "src/lib/core/state" }
ferrumc-storage = { path = "src/lib/storage" }
ferrumc-text = { path = "src/lib/text" }
ferrumc-threadpool = { path = "src/lib/utils/threadpool" }
ferrumc-utils = { path = "src/lib/utils" }
ferrumc-world = { path = "src/lib/world" }
ferrumc-world-gen = { path = "src/lib/world_gen" }
ferrumc-inventories = { path = "src/lib/inventories" }
ferrumc-data = { path = "src/lib/data" }
ferrumc-components = { path = "src/lib/components" }
ferrumc-events = { path = "src/lib/events" }
ferrumc-dashboard = { path = "src/lib/dashboard" }
ferrumc-messages = { path = "src/lib/messages" }
ferrumc-entities = { path = "src/lib/entities" }
ferrumc-physics = { path = "src/lib/physics" }
ferrumc-particles = { path = "src/lib/particles" }

# Asynchronous
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
    "io-util",
    "test-util",
], default-features = false }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing-tracy = "0.11.4"
log = "0.4.29"

# Concurrency/Parallelism
parking_lot = "0.12.5"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
rusty_pool = "0.7.0"
crossbeam-queue = "0.3.12"

# Network
ureq = "3.1.4"
reqwest = { version = "0.13.1", features = ["json"] }

# Error handling
thiserror = "2.0.17"

# Cryptography
rand = "0.9.2"
fnv = "1.0.7"
wyhash = "0.6.0"
ahash = "0.8.12"
rsa = { version = "0.9.9" }
aes = { version = "0.8.4" }
cfb8 = "0.8.1"
sha1 = "0.10.6"
num-bigint = "0.4.6"

# Encoding/Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_derive = "1.0.228"
base64 = "0.22.1"

bitcode = "0.6.9"
bitcode_derive = "0.6.9"
toml = "0.9.8"
craftflow-nbt = "2.1.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
simd-json = "0.17.0"
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc", "derive"] }

# Bit manipulation
byteorder = "1.5.0"

# Data types
dashmap = "7.0.0-rc2"
uuid = { version = "1.19.0", features = ["v4", "v3", "serde"] }
indexmap = { version = "2.12.1", features = ["serde"] }
bimap = "0.6.3"

# Macros
lazy_static = "1.5.0"
quote = "1.0.42"
syn = "2.0.112"
proc-macro2 = "1.0.104"
paste = "1.0.15"
maplit = "1.0.2"
macro_rules_attribute = "0.2.2"
enum_discriminant = "1.0.1"

# Magic
dhat = "0.3.3"
ctor = "0.6.3"

# Compression/Decompression
flate2 = { version = "1.1.5", features = ["zlib"], default-features = false }
lzzzz = "2.0.0"
yazi = "0.2.1"

# Database
heed = "0.22.1-nested-rtxns-6"

# CLI
clap = "4.5.53"
indicatif = "0.18.3"
colored = "3.0.0"

# Misc
deepsize = "0.2.0"
page_size = "0.6.0"
enum-ordinalize = "4.3.2"
regex = "1.12.2"
noise = "0.9.0"
ctrlc = "3.5.1"
num_cpus = "1.17.0"
typename = "0.1.2"
bevy_ecs = { version = "0.17.3", features = ["multi_threaded", "trace"] }
bevy_math = "0.17.3"
once_cell = "1.21.3"
include_dir = "0.7.4"
mime_guess = "2.0.5"
dunce = "1.0.5"

# I/O
memmap2 = "0.9.9"
tempfile = "3.23.0"

# Benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }

phf = { version = "0.11", features = ["macros"] }
phf_codegen = { version = "0.11" }

# Web server
axum = { version = "0.8.7", features = ["tokio", "ws"] }

# Stats
sysinfo = "0.37.2"
dir-size = "0.1.1"

[profile.dev.package.yazi]
opt-level = 3
