[package]
name = "ferrumc-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-ecs = { workspace = true }
ferrumc-core = { workspace = true }
ferrumc-events = { workspace = true }
ferrumc-net = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
