[package]
name = "ferrumc-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-config = { workspace = true }
bevy_ecs = { workspace = true}
ferrumc-core = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
maplit = { workspace = true }

[lints]
workspace = true
