[package]
name = "custom_nbt"
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
#luna_nbt = "0.0.3"
fastnbt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
#hematite-nbt = "0.5.2"

[[bench]]
name = "benches"
harness = false


[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports"]

[profile.test]
inherits = "release"
opt-level = 3