[package]
name = "ferrumc_codec"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
tokio = { version = "1.16.1", features = ["io-util", "macros", "rt-multi-thread"] }
byteorder = "1.5.0"
bincode = "2.0.0-rc.3"
serde_derive = "1.0.209"
serde = "1.0.209"
deepsize = "0.2.0"
flate2 = { version = "1.0.33", features = ["zlib"] }