[package]
name = "ferrumc-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
ferrumc-text = { workspace = true }
ferrumc-core = { workspace = true }
enum-ordinalize = { workspace = true }
ferrumc-macros = { workspace = true }
bevy_ecs = { workspace = true }
ferrumc-net-codec = { workspace = true }
regex = { workspace = true }

[dev-dependencies] # Needed for the ServerState mock... :concern:
ferrumc-world = { workspace = true }
ctor = { workspace = true }
