[package]
name = "ferrumc-commands"
version = "0.1.0"
edition = "2021"
description = "The command parsing engine and dispatch graph for the FerrumC server. Implements a Brigadier-style command tree without containing specific game logic."

[dependencies]
# Layer 1: Primitives
ferrumc-core = { workspace = true }
ferrumc-utils = { workspace = true }
ferrumc-text = { workspace = true }  # For error messages/feedback

# Layer 2: State (For EventWriter/Entity references in Context)
ferrumc-ecs = { workspace = true }

# External
thiserror = { workspace = true }
tracing = { workspace = true }
enum-ordinalize = { workspace = true }

[dev-dependencies] # Needed for the ServerState mock... :concern:
ctor = { workspace = true }
