[package]
name = "ferrumc-components"
version = "0.1.0"
edition = "2021"
description = "FerrumC components"

[dependencies]
bevy_ecs = { workspace = true }

ferrumc-inventories = { workspace = true }
ferrumc-core = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-config = { workspace = true }
