[package]
name = "ferrumc-core"
description = "This crate defines all the primitives, traits and logics used in FerrumC codebase."
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

bitcode = { workspace = true, optional = true }
deepsize = { workspace = true, optional = true }

[features]
default = ["bitcode", "deepsize"]
