[package]
name = "ferrumc-core"
description = "This crate defines all the primitives, traits and logics used in FerrumC codebase."
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
typename = { workspace = true }
ferrumc-text = { workspace = true }
ferrumc-net-codec = { workspace = true }
uuid = { workspace = true }
crossbeam-queue = { workspace = true }
bitcode = { workspace = true }
bitcode_derive = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
