[package]
name = "ferrumc-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]

tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
sysinfo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
dir-size = { workspace = true }

# ferrumc local crates
ferrumc-state = { workspace = true }
ferrumc-config = { workspace = true, features = ["dashboard"] }
ferrumc-general-purpose = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
simd-json = { workspace = true }

anyhow = "1.0"
zip = "7.0"