[package]
name = "ferrumc-data"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"


[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
rayon = { workspace = true }

