[package]
name = "ferrumc-default-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrumc-messages = { workspace = true }
ferrumc-components = { workspace = true }
ferrumc-commands = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-text = { workspace = true }
ferrumc-core = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-net = { workspace = true }
ferrumc-performance = { workspace = true }
ferrumc-data = { workspace = true }
ferrumc-inventories = { workspace = true }
ferrumc-entities = { workspace = true }
lazy_static = { workspace = true }
bimap = { workspace = true }

ctor = { workspace = true }
tracing = { workspace = true }
bevy_ecs = { workspace = true }
