[package]
name = "ferrumc-macros"
version = "0.1.0"
edition = "2021"

[features]
default = ["colors"]
colors = []

[lib]
proc-macro = true

[dependencies]
colored = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
craftflow-nbt = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
bitcode = { workspace = true }
simd-json = { workspace = true }