[package]
name = "ferrumc-ecs"
description = "FerrumC specific ECS (Entity Component System) implementation."
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
scc = { workspace = true }
async-iterator = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rand = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "ecs_bench"
harness = false