[package]
name = "ferrumc-entities"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }

ferrumc-core = { workspace = true }
ferrumc-data = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-net = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-state = { workspace = true }
ferrumc-world = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
uuid = {workspace = true }
rand = { workspace = true }
typename = {workspace = true }
once_cell = {workspace = true }
crossbeam-queue = {workspace = true }

serde = {workspace = true }
serde_derive = { workspace = true }
